Issue #DTW-5: Changed footer spacing

--- a/source/_patterns/02-components/footer.scss
+++ b/source/_patterns/02-components/footer.scss
@@ -7,7 +7,7 @@
   padding-top: 50px;
 
   @include breakpoint($breakpoint-desk) {
-    margin-top: 150px;
+    margin-top: 120px;
   }
 
   &--content {
